policy_copying_conflict.log

In file included from /mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/tests/compile_fail/policy_copying_conflict.cpp:4:
In file included from /mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/include/pb/pipeline.hpp:9:
In file included from /mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/include/pb/core/describe.hpp:10:
In file included from /mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/include/pb/core/validate.hpp:3:
/mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/include/pb/core/pipeline_state.hpp:777:17: error: static assertion failed due to requirement 'copying_policy_count <= 1': pb::pipeline_state::with accepts at most one pb::policy::copying::* marker; duplicate or conflicting copying policies are rejected
  777 |   static_assert(copying_policy_count <= 1,
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~
/mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/include/pb/core/pipeline_state.hpp:864:3: note: in instantiation of template class 'pb::core::detail::append_policies<pb::meta::type_list<pb::policy::copying::value>, pb::policy::copying::clone>' requested here
  864 |   using with = pipeline_state<typename detail::append_policies<Policies, NewPolicies...>::type,
      |   ^
/mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/tests/compile_fail/policy_copying_conflict.cpp:24:70: note: in instantiation of template type alias 'with' requested here
   24 | using BadPipeline = pb::from<Raw>::with<pb::policy::copying::value>::with<
      |                                                                      ^
/mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/include/pb/core/pipeline_state.hpp:777:38: note: expression evaluates to '2 <= 1'
  777 |   static_assert(copying_policy_count <= 1,
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~
/mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/tests/compile_fail/policy_copying_conflict.cpp:25:47: error: expected ';' after alias declaration
   25 |     pb::policy::copying::clone>::then<Stage>::to<Done>;
      |                                               ^
      |                                               ;
/mnt/c/Users/Tonyt/Documents/GitHub/Pipeline-c++/.omx/team/use-omx-context-goal-7ab24248/worktrees/worker-3/tests/compile_fail/policy_copying_conflict.cpp:29:28: error: use of undeclared identifier 'BadPipeline'
   29 | int main() { return sizeof(BadPipeline); }
      |                            ^
3 errors generated.

